base/src/test/resources/failure/projection/ix-too-small.aya.txt
In file $FILE:1:42 ->

  1 | def test (A B : Type) (p : Sig A ** B) => p.0
                                                ^-^

Error: Wrong projection index. It should be in range [1, 2] while you wanted the
       0th one.
What are you doing?
